# simple-sql-parser

./: .gitignore  .travis.yml  LICENSE  Makefile  Parser.lhs  Pretty.lhs  PrettyIt.lhs  README  Syntax.lhs  TODO  Tests.lhs  Tpch.lhs  changelog  index.html  main.css  release_checklist  shell.nix  simple-sql-parser.cabal  stack.yaml  supported_sql.html  test_cases.html  tpch.sql  tpch.sql.html
Language/SQL/SimpleSQL/: Combinators.hs  Combinators.lhs  Dialect.hs  Dialect.lhs  Errors.hs  Errors.lhs  Fixity.lhs  Lex.hs  Lex.lhs  Lexer.lhs  Parse.hs  Parse.lhs  Parser.lhs  Pretty.hs  Pretty.lhs  Syntax.hs  Syntax.lhs
examples/: ErrorMessagesTool.hs  SimpleSQLParserTool.hs
expected-parse-errors/: golden
haddock/: Language-SQL-SimpleSQL-Lexer.html  Language-SQL-SimpleSQL-Parser.html  Language-SQL-SimpleSQL-Pretty.html  Language-SQL-SimpleSQL-Syntax.html  Parser.html  Pretty.html  Syntax.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  mini_Language-SQL-SimpleSQL-Lexer.html  mini_Language-SQL-SimpleSQL-Parser.html  mini_Language-SQL-SimpleSQL-Pretty.html  mini_Language-SQL-SimpleSQL-Syntax.html  mini_Parser.html  mini_Pretty.html  mini_Syntax.html  simple-sql-parser.haddock
src/: RenderTestCases.lhs  index.txt  make_website.sh  supported_sql.txt  test_cases.txt  tpch.sql
tests/: FilterSpaces.hs  RunTests.hs  ShowErrors.hs
tests/Language/SQL/SimpleSQL/: CreateIndex.hs  CustomDialect.hs  EmptyStatement.hs  ErrorMessages.hs  Expectations.hs  FullQueries.hs  GroupBy.hs  LexerTests.hs  MySQL.hs  Odbc.hs  Oracle.hs  Postgres.hs  QueryExprComponents.hs  QueryExprParens.hs  QueryExprs.hs  SQL2011AccessControl.hs  SQL2011Bits.hs  SQL2011DataManipulation.hs  SQL2011Queries.hs  SQL2011Schema.hs  ScalarExprs.hs  TableRefs.hs  TestRunners.hs  TestTypes.hs  Tests.hs  Tpch.hs
tools/: Filter.hs  Filter.lhs  FilterSpaces.lhs  Fixity.hs  Fixity.lhs  RunTests.lhs  SQLIndent.lhs  ShowErrors.lhs  SimpleSQLParserExample.hs  SimpleSqlParserTool.hs  SimpleSqlParserTool.lhs
tools/Language/SQL/SimpleSQL/: CreateIndex.hs  CreateIndex.lhs  CustomDialect.hs  CustomDialect.lhs  EmptyStatement.hs  EmptyStatement.lhs  ErrorMessages.lhs  FullQueries.hs  FullQueries.lhs  GroupBy.hs  GroupBy.lhs  LexerTests.hs  LexerTests.lhs  Misc.lhs  MySQL.hs  MySQL.lhs  Odbc.hs  Odbc.lhs  Oracle.hs  Oracle.lhs  Postgres.hs  Postgres.lhs  QueryExprComponents.hs  QueryExprComponents.lhs  QueryExprs.hs  QueryExprs.lhs  SQL2003.lhs  SQL2011.lhs  SQL2011AccessControl.hs  SQL2011AccessControl.lhs  SQL2011Bits.hs  SQL2011Bits.lhs  SQL2011DataManipulation.hs  SQL2011DataManipulation.lhs  SQL2011Queries.hs  SQL2011Queries.lhs  SQL2011Schema.hs  SQL2011Schema.lhs  ScalarExprs.hs  ScalarExprs.lhs  (+9 more)
website/: AddLinks.hs  AddLinks.lhs  RenderTestCases.hs  RenderTestCases.lhs  contributing.asciidoc  index.asciidoc  index.md  index.txt  main1.css  make_website.sh  release_checklist.asciidoc  render-test-cases.cabal  supported_sql.asciidoc  supported_sql.md  template.pandoc  template1.pandoc  tpch21.sql
