cabal-version:       2.2

name:                simple-sql-parser
version:             0.7.0
synopsis:            A parser for SQL.

description:

                     A parser for SQL. Parses most SQL:2011
                     queries, non-query DML, DDL, access control and
                     transaction management syntax. Please see the
                     homepage for more information
                     <http://jakewheat.github.io/simple-sql-parser/latest>.

homepage:            http://jakewheat.github.io/simple-sql-parser/latest
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jake Wheat
maintainer:          jakewheatmail@gmail.com
copyright:           Copyright Jake Wheat 2013, 2014, 2015
category:            Database,Language
build-type:          Simple
extra-source-files:  README,LICENSE,changelog
bug-reports:         https://github.com/JakeWheat/simple-sql-parser/issues

source-repository head
  type:                git
  location:            https://github.com/JakeWheat/simple-sql-parser.git

Flag parserexe
  Description: Build SimpleSqlParserTool exe
  Default:     False

common shared-properties
  default-language:    Haskell2010
  build-depends:       base >=4 && <5,
                       megaparsec >=9.6 && <9.7, 
                       parser-combinators >= 1.3 && < 1.4,
                       mtl >=2.1 && <2.4,
                       prettyprinter >= 1.7 && < 1.8,
                       text  >= 2.1 && < 2.2,
                       containers

  ghc-options:         -Wall

  
library
  import:              shared-properties
  exposed-modules:     Language.SQL.SimpleSQL.Pretty,
                       Language.SQL.SimpleSQL.Parse,
                       Language.SQL.SimpleSQL.Lex,
                       Language.SQL.SimpleSQL.Syntax,
                       Language.SQL.SimpleSQL.Dialect

Test-Suite Tests
  import:              shared-properties
  type:                exitcode-stdio-1.0
  main-is:             RunTests.hs
  hs-source-dirs:      tools
  Build-Depends:       simple-sql-parser,
                       tasty >= 1.1 && < 1.6,
                       tasty-hunit >= 0.9 && < 0.11

  Other-Modules:       Language.SQL.SimpleSQL.ErrorMessages,
                       Language.SQL.SimpleSQL.FullQueries,
                       Language.SQL.SimpleSQL.GroupBy,
                       Language.SQL.SimpleSQL.MySQL,
                       Language.SQL.SimpleSQL.Postgres,
                       Language.SQL.SimpleSQL.Odbc,
                       Language.SQL.SimpleSQL.Oracle,
                       Language.SQL.SimpleSQL.QueryExprComponents,
                       Language.SQL.SimpleSQL.QueryExprs,
                       Language.SQL.SimpleSQL.SQL2011Queries,
                       Language.SQL.SimpleSQL.SQL2011AccessControl,
                       Language.SQL.SimpleSQL.SQL2011Bits,
                       Language.SQL.SimpleSQL.SQL2011DataManipulation,
                       Language.SQL.SimpleSQL.SQL2011Schema,
                       Language.SQL.SimpleSQL.TableRefs,
                       Language.SQL.SimpleSQL.TestTypes,
                       Language.SQL.SimpleSQL.Tests,
                       Language.SQL.SimpleSQL.Tpch,
                       Language.SQL.SimpleSQL.ScalarExprs,
                       Language.SQL.SimpleSQL.LexerTests,
                       Language.SQL.SimpleSQL.CustomDialect,
                       Language.SQL.SimpleSQL.EmptyStatement,
                       Language.SQL.SimpleSQL.CreateIndex
                       
  ghc-options:         -threaded

executable SimpleSqlParserTool
  import:              shared-properties
  main-is:             SimpleSqlParserTool.hs
  hs-source-dirs:      tools
  Build-Depends:       simple-sql-parser,
                       pretty-show >= 1.6 && < 1.10
  if flag(parserexe)
    buildable:         True
  else
    buildable:         False
