cabal-version:       2.2

name:                simple-sql-parser
version:             0.8.0
synopsis:            A parser for SQL.

description:         A parser for SQL. Parses most SQL:2011
                     queries, non-query DML, DDL, access control and
                     transaction management syntax. Please see the
                     homepage for more information
                     <http://jakewheat.github.io/simple-sql-parser/latest>.

homepage:            http://jakewheat.github.io/simple-sql-parser/latest
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jake Wheat
maintainer:          jakewheat@tutanota.com
copyright:           Copyright 2013 - 2024, Jake Wheat and the simple-sql-parser contributors.
category:            Database,Language
build-type:          Simple
extra-doc-files:     README,LICENSE,changelog
bug-reports:         https://github.com/JakeWheat/simple-sql-parser/issues

source-repository head
  type:                git
  location:            https://github.com/JakeWheat/simple-sql-parser.git

Flag parserexe
  Description: Build SimpleSQLParserTool exe
  Default:     False

common shared-properties
  default-language:    Haskell2010
  build-depends:       base >=4 && <5,
                       megaparsec >=9.6 && <9.7, 
                       parser-combinators >= 1.3 && < 1.4,
                       mtl >=2.1 && <2.4,
                       prettyprinter >= 1.7 && < 1.8,
                       text >= 2.0 && < 2.2,
                       containers >= 0.6 && < 0.8
  ghc-options:         -Wall
  
library
  import:              shared-properties
  exposed-modules:     Language.SQL.SimpleSQL.Pretty,
                       Language.SQL.SimpleSQL.Parse,
                       Language.SQL.SimpleSQL.Lex,
                       Language.SQL.SimpleSQL.Syntax,
                       Language.SQL.SimpleSQL.Dialect

Test-Suite Tests
  import:              shared-properties
  type:                exitcode-stdio-1.0
  main-is:             RunTests.hs
  hs-source-dirs:      tests
  Build-Depends:       simple-sql-parser,
                       hspec,
                       hspec-megaparsec,
                       hspec-expectations,
                       raw-strings-qq,
                       hspec-golden,
                       filepath,
                       pretty-show,

  Other-Modules:       Language.SQL.SimpleSQL.ErrorMessages,
                       Language.SQL.SimpleSQL.FullQueries,
                       Language.SQL.SimpleSQL.GroupBy,
                       Language.SQL.SimpleSQL.MySQL,
                       Language.SQL.SimpleSQL.Postgres,
                       Language.SQL.SimpleSQL.Odbc,
                       Language.SQL.SimpleSQL.Oracle,
                       Language.SQL.SimpleSQL.QueryExprComponents,
                       Language.SQL.SimpleSQL.QueryExprs,
                       Language.SQL.SimpleSQL.QueryExprParens,
                       Language.SQL.SimpleSQL.SQL2011Queries,
                       Language.SQL.SimpleSQL.SQL2011AccessControl,
                       Language.SQL.SimpleSQL.SQL2011Bits,
                       Language.SQL.SimpleSQL.SQL2011DataManipulation,
                       Language.SQL.SimpleSQL.SQL2011Schema,
                       Language.SQL.SimpleSQL.TableRefs,
                       Language.SQL.SimpleSQL.TestTypes,
                       Language.SQL.SimpleSQL.Tests,
                       Language.SQL.SimpleSQL.Tpch,
                       Language.SQL.SimpleSQL.ScalarExprs,
                       Language.SQL.SimpleSQL.LexerTests,
                       Language.SQL.SimpleSQL.CustomDialect,
                       Language.SQL.SimpleSQL.EmptyStatement,
                       Language.SQL.SimpleSQL.CreateIndex
                       Language.SQL.SimpleSQL.Expectations
                       Language.SQL.SimpleSQL.TestRunners
                       
  ghc-options:         -threaded

-- this is a testing tool, do some dumb stuff to hide the dependencies in hackage
Test-Suite SimpleSQLParserTool
  import:              shared-properties
  type:                exitcode-stdio-1.0
  main-is:             SimpleSQLParserTool.hs
  hs-source-dirs:      examples
  Build-Depends:       simple-sql-parser,
                       pretty-show >= 1.6 && < 1.10
  if flag(parserexe)
    buildable:         True
  else
    buildable:         False

